# arcaflow-plugin-minio

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  example.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_minio/: minio_plugin.py  minio_schema.py
tests/: test_arcaflow_plugin_minio.py  test_arcaflow_plugin_template_python.py
