[tool.poetry]
name = "arcaflow-plugin-minio"
version = "0.1.0"
description = ""
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0+AGPL-3.0-only"

packages = [
   { include="minio_plugin.py", from="./arcaflow_plugin_minio"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.11.0"
minio = "^7.1.15"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^2.0.0"
pydocstyle = "^6.1.1"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
